--- a/test/html/gcintranet/template-exitscript-fr.html
+++ b/test/html/gcintranet/template-exitscript-fr.html
@@ -51,6 +51,9 @@
 					<li>
 						Ce lien <a href="https://google.com">https://google.com</a> n'affichera pas un avertissement car son nom de domaine (google.com) est dans la liste d'exception <code>exitDomains</code>.
 					</li>
+					<li>
+						Ce lien <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a> a l'attribut <code>cdts-exitscript-disabled</code> l'exemptant de exitscript.
+					</li>
 				</ul>
 			</section>
 			<div id="def-preFooter">
