--- a/test/html/gcweb/template-exitscript-en.html
+++ b/test/html/gcweb/template-exitscript-en.html
@@ -72,6 +72,10 @@
                     has his hostname (google.com) in the exception list <code>exitDomains</code>.
                     You won't be redirect to <code>exiturl-en.html</code>.
                 </li>
+                <li>
+                    This link <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a>
+                    has the attribute <code>cdts-exitscript-disabled</code> exempting it from exitscript.
+                </li>
             </ul>
         </section>
         <div id="cdts-def-preFooter">
