--- a/test/html/gcweb/template-exitscript-fr.html
+++ b/test/html/gcweb/template-exitscript-fr.html
@@ -54,6 +54,10 @@
 						Ce lien <a href="https://google.com">https://google.com</a> a son nom de domaine (google.com) dans la liste d'exception <code>exitDomains</code>.
 						Vous ne serez pas redirigé sur la page <code>exiturl-fr.html</code>.
 					</li>
+					<li>
+						Ce lien <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a>
+						a l'attribut <code>cdts-exitscript-disabled</code> l'exemptant de exitscript.
+					</li>
 				</ul>
 			</section>
 			<div id="def-preFooter">
