--- a/test/html/gcintranet/template-exitscript-en.html
+++ b/test/html/gcintranet/template-exitscript-en.html
@@ -70,6 +70,10 @@
                     won't display a warning because his hostname (google.com) is in the exception list
                     <code>exitDomains</code>.
                 </li>
+                <li>
+                    This link <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a>
+                    has the attribute <code>cdts-exitscript-disabled</code> exempting it from exitscript.
+                </li>
             </ul>
         </section>
         <div id="cdts-def-preFooter">
