Fixing sample text

--- a/public/gcintranet/samples/exitscript-en.html
+++ b/public/gcintranet/samples/exitscript-en.html
@@ -76,7 +76,7 @@
                 <li><code class="wb-prettify">displayModalForNewWindow</code>: If set to true, will not display modal for links that open in new window</li>
 
             </ul>
-            <p>The attribute <code class="wb-prettify">cdts-exitscript-disabled</code> can be added to individual links to exempt it from exit script.</p>
+            <p>The attribute <code class="wb-prettify">cdts-exitscript-disabled</code> can be added to individual links to exempt them from exit script.</p>
             <pre>
 document.write(wet.builder.refFooter({
 ...
