--- a/public/gcweb/samples/exitscript-fr.html
+++ b/public/gcweb/samples/exitscript-fr.html
@@ -78,6 +78,7 @@
                 <li><code class="wb-prettify">displayModalForNewWindow</code>: S'il est défini <code>true</code>, n'affichera pas modal pour les liens qui s'ouvrent dans une nouvelle fenêtre</li>
 
             </ul>
+            <p>L'attribut <code class="wb-prettify">cdts-exitscript-disabled</code> peut être ajouté à des liens individuels pour les exempter de script.</p>
             <pre>
 document.write(wet.builder.refFooter({
 ...
@@ -114,6 +115,11 @@ document.write(wet.builder.refFooter({
 					<li>
 						Ce lien <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a>
 						a son nom d'hôte (developer.mozilla.org) dans la liste des exceptions <code>exitDomains</code>.
+						Vous ne serez pas redirigé vers <code>exiturl-en.html</code>.
+					</li>
+					<li>
+						Ce lien <a href="https://www.canada.ca/" cdts-exitscript-disabled="true">https://www.canada.ca/</a>
+						a l'attribut <code>cdts-exitscript-disabled</code> l'exemptant de script.
 						Vous ne serez pas redirigé vers <code>exiturl-en.html</code>.
 					</li>
 				</ul>
