--- a/public/gcweb/samples/home-en.html
+++ b/public/gcweb/samples/home-en.html
@@ -157,7 +157,7 @@ defTop.outerHTML = wet.builder.top({
     <h2>Focus on</h2>
     <div class="wb-eqht row">
     <div class="col-lg-4 col-md-6">
-    <h3><a href="https://www.aadnc-aandc.gc.ca/eng/1461766373625/1461766394598">Indigenous peoples</a></h3>
+    <h3><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous peoples</a></h3>
     <p>Programs and services for First Nations, Inuit and Métis</p>
     </div>
     <div class="col-lg-4 col-md-6">
