--- a/public/gcweb/samples/home-fr.html
+++ b/public/gcweb/samples/home-fr.html
@@ -157,7 +157,7 @@ defTop.outerHTML = wet.builder.top({
     <h2>Par public</h2>
     <div class="wb-eqht row">
     <div class="col-lg-4 col-md-6">
-    <h3><a href="https://www.aadnc-aandc.gc.ca/fra/1461766373625/1461766394598">Autochtones</a></h3>
+    <h3><a href="https://www.canada.ca/fr/services/autochtones.html">Autochtones</a></h3>
     <p>Programmes et services pour les Premières nations, les Inuits et les Métis</p>
     </div>
     <div class="col-lg-4 col-md-6">
