--- a/public/gcweb/samples/feedback-and-share-en.html
+++ b/public/gcweb/samples/feedback-and-share-en.html
@@ -56,28 +56,45 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Feedback and Share</h1>
-			<p>This page will demonstrate how to enable/disable the Feedback Link, as well as how to use the feature to share the current page with some predefined Social Media applications.</p>
+			<p>This page will demonstrate how to enable the Page Feedback Tool, as well as how to use the feature to share the current page with some predefined Social Media applications.</p>
 			<h2>Feedback</h2>
-            <p>Specify the "Report a problem or mistake on this page" button of your page. By default this button is shown with the default Canada.ca URL. You can customize the URL or simply hide the button.</p>
+			<p>As of v4.2.0, CDTS is replacing the 'Report a Problem' button with the new Page Feedback Tool provided by WET. By default, the page feedback tool will not be displayed. It will have to be turned on. Also, it can customized to add a contact link of your choosing.</p>
+			<p>For more information, please visit the WET documentation <a href="https://wet-boew.github.io/GCWeb/sites/feedback/feedback-docs-en.html">here</a>.</p>
             <h3>Implementation</h3>
-            <p>This link can be customized in the <code>preFooter</code> section of your page.</p>
-            <p>Hide the button</p>
+            <p>This page feedback tool can be added and customized in the <code>preFooter</code> section of your page.</p>
+            <p>Show the page feedback tool</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
-    "showFeedback": false
+    "showFeedback": true
 ...
 });
             </pre>
-            <p>Customize the URL</p>
+            <p>Customize the tool to add a contact link</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
-    "showFeedback": "Custom URL here"
+    "showFeedback": {
+        "text": "Contact Name",
+        "url": "Contact URL"
+    }
 ...
 });
 
             </pre>
+            <p>Update the values of hidden input fields: Theme and Section</p>
+            <pre>
+defPreFooter.outerHTML = wet.builder.preFooter({
+...
+    "showFeedback": {
+        "Theme": "Text defining the theme of your page",
+        "Section": "Text defining the section where your page resides"
+    }
+...
+});
+            </pre>
+            <p><b>Note: </b>Your page needs to have the following metadata: <code>&lt;meta name="dcterms.creator" content="[Department name]"&gt;</code></p>
+            <p><b>Note: </b>The values for Theme, Section and Department Name should be the SAME for English and French.</p>
             <h2>Share</h2>
             <p>The "Share This Page" button is a way for the users to share the URL of the site via Social Media. By default this button is shown with the default selection of social media sites. You can customize this selection or simply hide the button.</p>
             <h3>Implementation</h3>
@@ -107,7 +124,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					"cdnEnv": "esdcprod",
-                    "showFeedback": "Custom URL here",
+                    "showFeedback": true,
                     "showShare": ["email", "facebook", "linkedin", "twitter"]
 				});
 			</script>
