--- a/public/gcweb/samples/feedback-and-share-fr.html
+++ b/public/gcweb/samples/feedback-and-share-fr.html
@@ -56,28 +56,45 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Commentaires et partage</h1>
-			<p>Cette page montrera comment activer / désactiver le lien de rétroaction, ainsi que comment utiliser la fonction pour partager la page actuelle avec certaines applications de médias sociaux prédéfinies.</p>
+			<p>Cette page montrera comment activer l'outil de rétroaction sur la page, ainsi que comment utiliser la fonction pour partager la page actuelle avec certaines applications de médias sociaux prédéfinies.</p>
 			<h2>Rétroaction</h2>
-            <p>Spécifiez le bouton « Signaler un problème ou une erreur sur cette page » de votre page. Par défaut, ce bouton est affiché avec l'URL par défaut de Canada.ca. Vous pouvez personnaliser l'URL ou simplement masquer le bouton.</p>
+            <p>À partir de la version 4.2.0, SGDC remplace le bouton « Signaler un problème » par le nouvel outil de rétroaction de page fourni par WET. Par défaut, l'outil de commentaires sur la page ne sera pas affiché. Il faudra l'allumer. En outre, l'outil de rétroaction sur la page peut être personnalisé pour ajouter un lien de contact de votre choix.</p>
+            <p>Pour plus d'informations, veuillez consulter la documentation WET <a href="https://wet-boew.github.io/GCWeb/sites/feedback/feedback-docs-fr.html">ici</a>.</p>
             <h3>Mise en oeuvre</h3>
-            <p>Ce lien peut être personnalisé dans la section <code>preFooter</code> de votre page.</p>
-            <p>Cacher le bouton</p>
+            <p>Cet outil de commentaires sur la page peut être ajouté et personnalisé dans la section <code>preFooter</code> de votre page.</p>
+            <p>Afficher l'outil de rétroaction sur la page</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
-    "showFeedback": false
+    "showFeedback": true
 ...
 });
             </pre>
-            <p>Personnalisez l'URL</p>
+            <p>Personnalisez l'outil pour ajouter un lien de contact</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
-    "showFeedback": "Custom URL here"
+    "showFeedback": {
+        "text": "Contact Name",
+        "url": "Contact URL"
+    }
 ...
 });
 
             </pre>
+            <p>Mettre à jour les valeurs des champs de saisie masqués : Thème et Section</p>
+            <pre>
+defPreFooter.outerHTML = wet.builder.preFooter({
+...
+    "showFeedback": {
+        "Theme": "Text defining the theme of your page",
+        "Section": "Text defining the section where your page resides"
+    }
+...
+	});
+            </pre>
+            <p><b>Note: </b>Vous pouvez définir les métadonnées suivantes : <code>&lt;meta name="dcterms.creator" content="[Department name]"&gt;</code></p>
+            <p><b>Note: </b>Les valeurs pour le thème, la section et le nom du département doivent être les MÊMES pour l'anglais et le français.</p>
             <h2>Partager</h2>
             <p>Le bouton « Partager cette page » est un moyen pour les utilisateurs de partager l'URL du site via les médias sociaux. Par défaut, ce bouton s'affiche avec la sélection par défaut des sites de réseaux sociaux. Vous pouvez personnaliser cette sélection ou simplement masquer le bouton.</p>
             <h3>Mise en oeuvre</h3>
