--- a/test/html/gcweb/template-gcweb-en.html
+++ b/test/html/gcweb/template-gcweb-en.html
@@ -12,6 +12,7 @@
     <!-- Meta data -->
     <meta name="description"
         content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
+    <meta name="dcterms.creator" content="[Department name]">
     <!-- Meta data-->
     <!-- Load closure template scripts -->
     <link rel="stylesheet" href="../cdts-styles.css">
