Updating property name

--- a/public/gcweb/samples/feedback-and-share-en.html
+++ b/public/gcweb/samples/feedback-and-share-en.html
@@ -66,7 +66,7 @@
             <ul>
                 <li><code class="wb-prettify">enabled</code>: (MANDATORY) - Set to true to enable the Page Feedback Tool</li>
                 <li><code class="wb-prettify">text</code>: (OPTIONAL) - Set a display name of your contact link</li>
-                <li><code class="wb-prettify">url</code>:  (OPTIONAL) - Customize the href of your contact link</li>
+                <li><code class="wb-prettify">href</code>:  (OPTIONAL) - Customize the url of your contact link</li>
                 <li><code class="wb-prettify">theme</code>:  (OPTIONAL) - Define the theme of your page</li>
                 <li><code class="wb-prettify">section</code>:  (OPTIONAL) - Define the section where your page resides</li>
 			</ul>
@@ -87,7 +87,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
     "showFeedback": {
         "enabled": true,
         "text": "Contact Name",
-        "url": "Contact URL"
+        "href": "Contact URL"
     }
 ...
 });
