Adding missing pagedetails check

--- a/public/gcweb/samples/feedback-and-share-en.html
+++ b/public/gcweb/samples/feedback-and-share-en.html
@@ -139,7 +139,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
 					"showFeedback": {
 						"enabled": true
 					},
-					"showShare": false,
+					"showShare": ["email", "facebook", "linkedin", "twitter"],
 					"dateModified": "2023-09-21"
 				});
 			</script>
