--- a/public/gcweb/samples/feedback-and-share-en.html
+++ b/public/gcweb/samples/feedback-and-share-en.html
@@ -6,7 +6,7 @@
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 		<title>CDTS Sample - Feedback and Share</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
-		<meta name="dcterms.creator" content="[Department name]">
+		<meta name="dcterms.creator" content="[Department name / Nom du département]">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 		<!-- Meta data-->
@@ -70,6 +70,8 @@
                 <li><code class="wb-prettify">theme</code>:  (OPTIONAL) - Define the theme of your page</li>
                 <li><code class="wb-prettify">section</code>:  (OPTIONAL) - Define the section where your page resides</li>
 			</ul>
+            <p><b>Note: </b>Your page MUST have the following metadata defined for the feedback tool to be enabled: <code>&lt;meta name="dcterms.creator" content="[Department name / Nom du département]"&gt;</code></p>
+            <p><b>Note: </b>The values for Theme, Section and Department Name should be the SAME for English and French.</p>
             <p>Show the page feedback tool</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
@@ -99,14 +101,12 @@ defPreFooter.outerHTML = wet.builder.preFooter({
 ...
     "showFeedback": {
         "enabled": true,
-        "theme": "Text defining the theme of your page",
-        "section": "Text defining the section where your page resides"
+        "theme": "Text defining the theme of your page / Texte définissant le thème de votre page",
+        "section": "Text defining the section where your page resides / Texte définissant la section où réside votre page"
     }
 ...
 });
             </pre>
-            <p><b>Note: </b>Your page needs to have the following metadata: <code>&lt;meta name="dcterms.creator" content="[Department name]"&gt;</code></p>
-            <p><b>Note: </b>The values for Theme, Section and Department Name should be the SAME for English and French.</p>
             <h2>Share</h2>
             <p>The "Share This Page" button is a way for the users to share the URL of the site via Social Media. By default this button is shown with the default selection of social media sites. You can customize this selection or simply hide the button.</p>
             <h3>Implementation</h3>
